--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,22 @@
 {
+  "name": "api",
+  "version": "1.0.0",
+  "description": "Blog website backend",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon index.js"
+  },
+  "author": "Maitulya",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.19.1"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.2.3",
+    "nodemon": "^3.1.0"
   }
 }
