--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-lottie": "^1.2.4",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
